Added H2 embedded database and BeerEntity and BeerRepository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+spring.h2.console.enabled=true
+spring.sql.init.mode=embedded
